Improve knowledge indexing and scrollable detail panels